--- a/index.html
+++ b/index.html
@@ -51,9 +51,19 @@
                 <form class="my-4">
                     <div class="form-group form-row my-4">
                         <div class="col">
+                            <label for="input-interview-date">Interview Date</label>
+                            <input type="text" class="form-control" id="input-interview-date" placeholder="DD/MMM/YEAR" aria-describedby="help-interview-date" />
+                            <small id="help-interview-date" class="form-text">The date the interview was conducted (DD/MMM/YEAR)</small>
+                        </div>
+                        <div class="col">
                             <label for="input-interviewer-name">Interviewer's Name</label>
                             <input type="text" class="form-control" id="input-interviewer-name" placeholder="Firstname Lastname" aria-describedby="help-interviewer-name" />
                             <small id="help-interviewer-name" class="form-text">The name of the person that conducted the interview.</small>
+                        </div>
+                        <div class="col">
+                            <label for="input-interviewer-rank">Interviewer's Rank</label>
+                            <input type="text" class="form-control" id="input-interviewer-rank" placeholder="Department Rank" aria-describedby="help-interviewer-rank" />
+                            <small id="help-interviewer-rank" class="form-text">The department rank of the person that conducted the interview.</small>
                         </div>
                         <div class="col">
                             <label for="input-interviewer-badge">Interviewer's Badge Number</label>
