--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
                         <small id="help-interviewee-name" class="form-text">The name of the person that was interviewed.</small>
                     </div>
                     <div class="form-group my-4">
+                        <label for="input-interview-result">Interview Result</label>
+                        <input type="text" class="form-control" id="input-interview-resul" placeholder=PASSED/FAILED aria-describedby="help-interview-result" />
+                        <small id="help-interview-result" class="form-text">PASSED OR FAILED</small>
+                    </div>
+                    <div class="form-group my-4">
                         <label for="input-participants-names">Names of all participants</label>
                         <textarea type="text" class="form-control" id="input-participants-names" aria-describedby="help-participants-names" rows="6" placeholder="Firstname Lastname"></textarea>
                         <small id="help-participants-names" class="form-text">Put the names of each participant on a separate line. Leave blank if no other people were involved.</small>
